Fix zero-hit queries for pluggable data formats
On a pluggable data format index (composite Parquet primary + Lucene
secondary), doc-values-backed fields — numeric (all widths), date,
date_nanos, ip, boolean, and scaled_float — are served from the
primary's doc-values column; the Lucene secondary writes no BKD points
for them. The mapping still reported index:true, so
IndexOrDocValuesQuery selected its point branch (cost=0, which wins the
cost race) and range/term/terms queries returned zero hits.

These field types now default index to false on pluggable data format
indices, so queries route through the doc-values branch and return
correct results. The default is a genuine parameter default (via a
supplier), not an explicit set, so it is not serialized into the
mapping.

An explicit index:true cannot be honoured (no points are written) and
is now rejected through data-format capability negotiation instead of a
hardcoded throw in core: the data formats no longer declare a search
capability for these types (POINT_RANGE for numeric/date/ip,
FULL_TEXT_SEARCH for boolean), so a field requesting search fails in
DataFormatRegistry#assignCapabilities — the same path that already
rejects unsupported field types.

Supporting changes so the capability check covers every entry point:

- createIndexMapperService now passes the DataFormatRegistry, so
  _mapping updates run capability assignment and reject index:true
  before it is persisted. Previously the update was accepted and the
  index then failed to reopen.
- Template and simulate validation inject the cluster's
  index.pluggable.dataformat (name) default onto their dummy index, in
  addition to the enabled flag, mirroring MetadataCreateIndexService,
  so templates relying on the cluster default still reject index:true
  at creation time.

The pluggableDataFormat flag is hoisted to ParametrizedFieldMapper (and
its Builder), and is set only by the constructors that receive index
settings, so builders for internal field typ